--- a/style.css
+++ b/style.css
@@ -298,9 +298,9 @@
     }
   
     .centralized-text {
-        text-align: left; /* Align the text to the left */
+        text-align: center; /* Align the text to the left */
         padding: 0 10px; /* Reduce side padding */
-        margin: 10px auto; /* Decrease vertical spacing */
+        margin: 0px auto; /* Decrease vertical spacing */
         max-width: 600px; /* Limit width */
     }
   
